Code Block Edit

--- a/default.css
+++ b/default.css
@@ -177,7 +177,7 @@ p {
     text-align: left;
     
     font-size: 15px;
-    font-family: Arial;
+    font-family: monospace;
     color: rgba(0, 0, 0, 0.5);
 
 }
