--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -5,24 +5,24 @@ layout: default
 
 <article {% if page.feature-img or page.color%}class="feature-image"{% endif %}>
 
-  {% if page.feature-img and page.feature-img != "interactive" %}
-  <header id="main" style="background-image: url('{{ page.feature-img | relative_url }}')">
-    
-    <h1 id="{{ page.title | default: "" | cgi_escape }}" class="title">
-  {% else if page.feature-img and page.feature-img == "interactive" %}
+  {% if page.feature-img and page.feature-img == "interactive" %}
   <div id="particles-js">
     <h1>
-      <span class="site-description">
-  {% endif %}
-        {{ page.title }}
-  {% if page.feature-img and page.feature-img != "interactive"  %}
-    </h1>
-  </header>
-  {% else if page.feature-img == "interactive" %}
-      </span>
+      <span class="site-description">{{page.title}}</span>
     </h1>
   </div>
+  {% else %}
+  <header id="main" style="">
+    {% unless page.hide_title %}
+      <h1 id="{{ page.title | cgi_escape }}" class="title">{{ page.title }}</h1>
+
+      <p class="meta">
+        {{ page.date | date: "%B %-d, %Y" }}
+      </p>
+    {% endunless %}
+  </header>
   {% endif %}
+
 
   <section class="post-content">
   {% if page.bootstrap %}
