--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,9 @@
     <script defer=true src="{{ '/assets/js/main.min.js' | relative_url }}"></script>
     <script defer=true src="{{ '/assets/js/particle.js' | relative_url }}"></script>
 
+    <!-- Slideshow -->
+    <script defer=true src="{{ '/assets/js/slideshow.js' | relative_url }}"></script>
+
     <!-- CSS -->
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 
