--- a/_sass/type-on-strap.scss
+++ b/_sass/type-on-strap.scss
@@ -23,4 +23,5 @@
 @import 'includes/projects';
 @import 'includes/grid';
 @import 'includes/share_buttons';
-@import 'includes/blog_nav.scss';
+@import 'includes/blog_nav';
+//@import 'includes/slideshow';
