Happy with the slideshow

--- a/_sass/type-on-strap.scss
+++ b/_sass/type-on-strap.scss
@@ -24,4 +24,4 @@
 @import 'includes/grid';
 @import 'includes/share_buttons';
 @import 'includes/blog_nav';
-//@import 'includes/slideshow';
+@import 'includes/slideshow';
