Adding old blogs and updated README

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -43,7 +43,7 @@ $header-link-color: #383838;
 $navbar-separator-opacity: 0;
 
 // Feature image for articles
-$feature-image-text-color: #fff;
+$feature-image-text-color: rgb(0, 0, 0);
 $feature-image-size: cover; // options include "cover", "contain", "auto"
 // Header description box
 $header-desc-background-color: $theme-color;
