--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -45,6 +45,7 @@ $navbar-separator-opacity: 0;
 // Feature image for articles
 $feature-image-text-color: rgb(0, 0, 0);
 $feature-image-size: cover; // options include "cover", "contain", "auto"
+$feature-image-height: 50vh;
 // Header description box
 $header-desc-background-color: $theme-color;
 $header-desc-text-color: #FFF;
