Added link to Gallery on the home page

--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -6,7 +6,7 @@
       <span class="site-title">{{site.title}}</span>
       <br><br>
       <span class="site-description">
-        <a href="/about/">About</a> &middot; <a href="../blog/index.html">Blog</a> &middot; <a href="/projects/">Projects</a>
+        <a href="/about/">About</a> &middot; <a href="../blog/index.html">Blog</a> &middot; <a href="/gallery/">Gallery</a> &middot; <a href="/projects/">Projects</a>
       </span>
     </h1>
 
