--- a/_includes/read-time.html
+++ b/_includes/read-time.html
@@ -1,3 +1,5 @@
+<!-- Code taken directly from: https://int3ractive.com/blog/2018/jekyll-read-time-without-plugins/-->
+
 <span class="reading-time" title="Estimated read time">
     {% assign words = include.content | strip_html | number_of_words %}
     {{ words | divided_by: 100 | plus: 1 }} minute read
